--- a/po/gl.po
+++ b/po/gl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2018-06-01 11:02+0000\n"
 "Last-Translator: Jiri Machalek <jiri.machalek@tieto.com>\n"
 "Language-Team: Galician <https://l10n.opensuse.org/projects/snapper/master/gl/>\n"
@@ -183,8 +183,53 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, c-format
 msgid "(Snapshot %d.)"
+msgstr ""
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
 msgstr ""
 
 msgid "--abbreviate"
@@ -194,6 +239,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -224,6 +275,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -290,6 +344,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -322,6 +379,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -439,6 +499,10 @@ msgid "Command 'status' needs one argument."
 msgstr "Moi poucos argumentos."
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "Moi poucos argumentos."
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "Moi poucos argumentos."
 
@@ -492,6 +556,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr ""
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "Creado o: "
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "Creado o: "
 
@@ -526,8 +594,16 @@ msgstr ""
 msgid "Default"
 msgstr ""
 
+#, fuzzy
+msgid "Delete:"
+msgstr "Creado o: "
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
+msgstr "DBI Execution failed: %s."
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
 msgstr "DBI Execution failed: %s."
 
 #, fuzzy
@@ -594,6 +670,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "Failed to parse: %s."
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Failed to parse: %s."
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -632,6 +712,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "Opción descoñecida"
 
 #, fuzzy, c-format
 msgid "IO Error (%s)."
@@ -689,11 +773,19 @@ msgstr "Estilo de táboa incorrecto %d."
 msgid "Invalid snapshots."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "Estilo de táboa incorrecto %d."
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "Estilo de táboa incorrecto %d."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "Estilo de táboa incorrecto %d."
 
 #, fuzzy, c-format
@@ -711,7 +803,14 @@ msgstr ""
 msgid "KiB"
 msgstr ""
 
+#, fuzzy
+msgid "List configs:"
+msgstr "Creado o: "
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, fuzzy, c-format
@@ -760,6 +859,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr ""
 
@@ -770,6 +872,12 @@ msgid "No permissions."
 msgstr ""
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -800,6 +908,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -826,6 +937,21 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "Creado o: "
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "Creado o: "
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "Estado da rede descoñecido"
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Erro de E/S"
@@ -841,6 +967,67 @@ msgstr ""
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+#, fuzzy
+msgid "SSH User"
+msgstr "Nome de Usuario"
 
 msgid "Save status to file."
 msgstr ""
@@ -862,6 +1049,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Estilo de táboa incorrecto %d."
+
+msgid "Set name of backup-config to use."
+msgstr ""
 
 msgid "Set name of config to use."
 msgstr ""
@@ -885,7 +1075,29 @@ msgstr ""
 msgid "Snapshot '%u' not found."
 msgstr "Non se atopou o %s '%s'."
 
+#, fuzzy
+msgid "Snapshot already on target."
+msgstr "DBI Execution failed: %s."
+
 msgid "Snapshot is in use."
+msgstr ""
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "Non se atopou o %s '%s'."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "Non se atopou o %s '%s'."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "Non se atopou o %s '%s'."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
 msgstr ""
 
 msgid "Subvolume"
@@ -908,6 +1120,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -921,8 +1142,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "DBI Execution failed: %s."
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "Intente utilizar \"%s --help\" ou \"%s --usage\" para obter máis información.\n"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "Intente utilizar \"%s --help\" ou \"%s --usage\" para obter máis información.\n"
 
 msgid "Try to make space available."
@@ -1053,7 +1288,29 @@ msgstr "Non hai nada que facer."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Intente utilizar \"%s --help\" ou \"%s --usage\" para obter máis información.\n"
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+#, fuzzy
+msgid "snbk list-configs"
+msgstr "Creado o: "
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+"Uso:\n"
+"\tsnapper [--global-options] <comando> [--command-options] [argumentos]"
+
+#, fuzzy
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 "Uso:\n"
 "\tsnapper [--global-options] <comando> [--command-options] [argumentos]"
