--- a/po/mr.po
+++ b/po/mr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2005-07-29 15:37+0530\n"
 "Last-Translator: \"( अमेय पाळंदे ) Ameya Palande\" <2ameya@gmail.com>\n"
 "Language-Team: Marathi <i18n@suse.de>\n"
@@ -181,9 +181,54 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "होस्ट %s आढळले नाही."
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -192,6 +237,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -222,6 +273,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -288,6 +342,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -321,6 +378,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -446,6 +506,10 @@ msgid "Command 'status' needs one argument."
 msgstr "जोडण्यासाठी एका युक्तिवादाची आवश्यकता"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "निर्माण करण्यासाठी कमीत कमी 3 युक्तिवादांची आवश्यकता"
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "गेट साठी कमीत कमी एका युक्तीवादाची आवश्यकता"
 
@@ -500,6 +564,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr "आकृतीबंध फाईल्स संग्रहित करत आहे..."
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "आकृतीबंध फाईल्स संग्रहित करत आहे..."
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "आकृतीबंध फाईल्स संग्रहित करत आहे..."
 
@@ -536,9 +604,16 @@ msgstr "सुरु केल्या नंतरचे"
 msgid "Default"
 msgstr ""
 
+msgid "Delete:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "आकृतीबंध फाईल्स संग्रहित करत आहे..."
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr " CA पुसून टाकण्यात अपयश: %1."
 
 #, fuzzy
 msgid "Deleting snapshot failed."
@@ -606,6 +681,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "Failed to parse: %s."
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Failed to parse: %s."
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -645,6 +724,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "अज्ञात जागतिक पर्याय"
 
 #, fuzzy, c-format
 msgid "IO Error (%s)."
@@ -702,11 +785,19 @@ msgstr "अवैध प्रकार %1."
 msgid "Invalid snapshots."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "अवैध प्रकार %1."
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "अवैध प्रकार %1."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "अवैध प्रकार %1."
 
 #, fuzzy, c-format
@@ -725,7 +816,13 @@ msgstr "केनिया"
 msgid "KiB"
 msgstr ""
 
+msgid "List configs:"
+msgstr ""
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, fuzzy, c-format
@@ -774,6 +871,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 #, fuzzy
 msgid "No command provided."
 msgstr "एकही आज्ञा दिलेली नाही"
@@ -786,6 +886,12 @@ msgid "No permissions."
 msgstr "परवानगी नाकारली"
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -816,6 +922,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -844,6 +953,20 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+msgid "Probing extra information for target snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "विवरण"
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "अज्ञात प्रकार"
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "I/O चूक"
@@ -858,6 +981,66 @@ msgid "Read-Only"
 msgstr ""
 
 msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+msgid "SSH User"
 msgstr ""
 
 msgid "Save status to file."
@@ -880,6 +1063,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "अवैध प्रकार %1."
+
+msgid "Set name of backup-config to use."
+msgstr ""
 
 msgid "Set name of config to use."
 msgstr ""
@@ -904,8 +1090,30 @@ msgid "Snapshot '%u' not found."
 msgstr "होस्ट %s आढळले नाही."
 
 #, fuzzy
+msgid "Snapshot already on target."
+msgstr "आकृतीबंध फाईल्स संग्रहित करत आहे..."
+
+#, fuzzy
 msgid "Snapshot is in use."
 msgstr "होस्ट %s आढळले नाही."
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "होस्ट %s आढळले नाही."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "होस्ट %s आढळले नाही."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "होस्ट %s आढळले नाही."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr ""
@@ -927,6 +1135,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -940,8 +1157,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "आकृतीबंध फाईल्स संग्रहित करत आहे..."
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "अधिक माहितीसाठी `%s --हेल्प' किंवा `%s --यूसेजचा' प्रयत्न करा.\n"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "अधिक माहितीसाठी `%s --हेल्प' किंवा `%s --यूसेजचा' प्रयत्न करा.\n"
 
 msgid "Try to make space available."
@@ -1071,7 +1302,25 @@ msgstr "करावयास काहीच नाही."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "अधिक माहितीसाठी `%s --हेल्प' किंवा `%s --यूसेजचा' प्रयत्न करा.\n"
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+msgid "snbk list-configs"
+msgstr ""
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 
 msgid "yes"
