--- a/po/ro.po
+++ b/po/ro.po
@@ -14,17 +14,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenSUSE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2024-05-14 15:46+0000\n"
 "Last-Translator: Coleasa Nicolae <nicolaefericitu@duck.com>\n"
-"Language-Team: Romanian <https://l10n.opensuse.org/projects/snapper/master/"
-"ro/>\n"
+"Language-Team: Romanian <https://l10n.opensuse.org/projects/snapper/master/ro/>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
-"20)) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < 20)) ? 1 : 2;\n"
 "X-Generator: Weblate 5.5.5\n"
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -201,9 +199,54 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "Nu am găsit sursa de instalare '%s'."
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -212,6 +255,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -242,6 +291,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -308,6 +360,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -343,20 +398,20 @@ msgstr ""
 msgid "Ambit is %s."
 msgstr ""
 
+msgid "Automatic"
+msgstr ""
+
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
 msgid "B"
 msgstr ""
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Nu se poate șterge instantaneul %d, deoarece acesta este sistemul curent."
+msgstr "Nu se poate șterge instantaneul %d, deoarece acesta este sistemul curent."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Nu se poate șterge instantaneul %d, deoarece este instantaneul montat în "
-"prezent."
+msgstr "Nu se poate șterge instantaneul %d, deoarece este instantaneul montat în prezent."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
@@ -458,6 +513,10 @@ msgid "Command 'status' needs one argument."
 msgstr ""
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "Comanda 'help' nu acceptă argumente."
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "get necesită cel puțin un argument"
 
@@ -510,6 +569,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr "Crearea configurației a eșuat (%s)."
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "Crearea configurației a eșuat (%s)."
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "Crearea configurației a eșuat (%s)."
 
@@ -545,9 +608,17 @@ msgstr "Dată"
 msgid "Default"
 msgstr ""
 
+#, fuzzy
+msgid "Delete:"
+msgstr "  Listează configurațiile:"
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Crearea configurației a eșuat (%s)."
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "Ștergerea CA a eșuat: %1."
 
 #, fuzzy
 msgid "Deleting snapshot failed."
@@ -616,6 +687,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "Date de emitere invalide."
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Date de emitere invalide."
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -655,6 +730,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "    Opțiuni globale:"
 
 # error box title
 #, fuzzy, c-format
@@ -714,11 +793,19 @@ msgstr ""
 msgid "Invalid snapshots."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "Date de emitere invalide."
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "Date de emitere invalide."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "Date de emitere invalide."
 
 #, fuzzy, c-format
@@ -736,7 +823,14 @@ msgstr "Kenia"
 msgid "KiB"
 msgstr ""
 
+#, fuzzy
+msgid "List configs:"
+msgstr "  Listează configurațiile:"
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, c-format
@@ -785,6 +879,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr ""
 
@@ -796,6 +893,12 @@ msgid "No permissions."
 msgstr "(permisiunile posesorului dezactivate)"
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -826,6 +929,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -853,6 +959,20 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+msgid "Probing extra information for target snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "Descriere"
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "Datele utilizatorului pentru instantanee."
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -869,6 +989,71 @@ msgstr ""
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+#, fuzzy
+msgid "SSH User"
+msgstr "Nume de utilizator"
 
 msgid "Save status to file."
 msgstr ""
@@ -890,6 +1075,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Date de emitere invalide."
+
+msgid "Set name of backup-config to use."
+msgstr ""
 
 msgid "Set name of config to use."
 msgstr ""
@@ -914,8 +1102,30 @@ msgid "Snapshot '%u' not found."
 msgstr "Nu am găsit sursa de instalare '%s'."
 
 #, fuzzy
+msgid "Snapshot already on target."
+msgstr "Crearea configurației a eșuat (%s)."
+
+#, fuzzy
 msgid "Snapshot is in use."
 msgstr "Configurația '%s' nu a fost găsită."
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "Configurația '%s' nu a fost găsită."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "Nu am găsit sursa de instalare '%s'."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "Nu am găsit sursa de instalare '%s'."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr ""
@@ -937,6 +1147,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -950,8 +1169,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "Crearea configurației a eșuat (%s)."
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "Încercați `%s --help' or `%s --usage' pentru mai multe informații\n"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "Încercați `%s --help' or `%s --usage' pentru mai multe informații\n"
 
 msgid "Try to make space available."
@@ -1078,7 +1311,28 @@ msgstr "Nimic de făcut."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Încercați `%s --help' or `%s --usage' pentru mai multe informații\n"
 
+#, fuzzy
+msgid "snbk delete [numbers]"
+msgstr "\tsnapper delete <număr>"
+
+#, fuzzy
+msgid "snbk list"
+msgstr "\tsnapper list"
+
+#, fuzzy
+msgid "snbk list-configs"
+msgstr "\tsnapper list-configs"
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 
 msgid "yes"
