--- a/po/be.po
+++ b/po/be.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2006-01-04 08:58+0100\n"
 "Last-Translator: Alexander Nyakhaychyk <nyakhaychyk@gmail.com>\n"
 "Language-Team: Belarusian <i18n@suse.de>\n"
@@ -181,9 +181,54 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "'%1' памылковая сеткавая маска."
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -192,6 +237,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -222,6 +273,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -288,6 +342,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -321,6 +378,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -426,6 +486,9 @@ msgstr ""
 msgid "Command 'status' needs one argument."
 msgstr ""
 
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr ""
+
 msgid "Command 'umount' needs at least one argument."
 msgstr ""
 
@@ -476,6 +539,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr ""
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "Падрыхтоўка дыскаў..."
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "Падрыхтоўка дыскаў..."
 
@@ -508,9 +575,16 @@ msgstr ""
 msgid "Default"
 msgstr ""
 
+msgid "Delete:"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "Падрыхтоўка дыскаў..."
 
 msgid "Deleting snapshot failed."
 msgstr ""
@@ -578,6 +652,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "Падрыхтоўка дыскаў..."
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Падрыхтоўка дыскаў..."
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -615,6 +693,12 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr ""
+"\n"
+"    Опцыі:"
 
 #, fuzzy, c-format
 msgid "IO Error (%s)."
@@ -674,11 +758,19 @@ msgstr ""
 msgid "Invalid snapshots."
 msgstr "Падрыхтоўка дыскаў..."
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "Падрыхтоўка дыскаў..."
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "Падрыхтоўка дыскаў..."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "Падрыхтоўка дыскаў..."
 
 #, fuzzy, c-format
@@ -696,7 +788,13 @@ msgstr ""
 msgid "KiB"
 msgstr ""
 
+msgid "List configs:"
+msgstr ""
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, c-format
@@ -744,6 +842,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr ""
 
@@ -754,6 +855,12 @@ msgid "No permissions."
 msgstr ""
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -784,6 +891,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -809,6 +919,22 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+#, fuzzy
+msgid "Probing extra information for source snapshots."
+msgstr "Падрыхтоўка дыскаў..."
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "Падрыхтоўка дыскаў..."
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "Падрыхтоўка дыскаў..."
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "Падрыхтоўка дыскаў..."
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Памылка"
@@ -823,6 +949,70 @@ msgid "Read-Only"
 msgstr ""
 
 msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+msgid "SSH User"
 msgstr ""
 
 msgid "Save status to file."
@@ -845,6 +1035,9 @@ msgstr ""
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Падрыхтоўка дыскаў..."
 
+msgid "Set name of backup-config to use."
+msgstr ""
+
 msgid "Set name of config to use."
 msgstr ""
 
@@ -866,8 +1059,30 @@ msgid "Snapshot '%u' not found."
 msgstr "'%1' памылковая сеткавая маска."
 
 #, fuzzy
+msgid "Snapshot already on target."
+msgstr "'%1' памылковая сеткавая маска."
+
+#, fuzzy
 msgid "Snapshot is in use."
 msgstr "'%1' памылковая сеткавая маска."
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "'%1' памылковая сеткавая маска."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "'%1' памылковая сеткавая маска."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "'%1' памылковая сеткавая маска."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr ""
@@ -889,6 +1104,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -902,7 +1126,20 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "Падрыхтоўка дыскаў..."
+
 msgid "Try 'snapper --help' for more information."
+msgstr ""
+
+msgid "Try 'snbk --help' for more information."
 msgstr ""
 
 msgid "Try to make space available."
@@ -1029,7 +1266,25 @@ msgstr ""
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+msgid "snbk list-configs"
+msgstr ""
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 
 msgid "yes"
