--- a/po/bn.po
+++ b/po/bn.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2004-08-09 10:24+0200\n"
 "Last-Translator: xxx <yyy@example.org>\n"
 "Language-Team: Bengali <i18n@suse.de>\n"
@@ -177,9 +177,54 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "হস্ট %s পাওয়া যায় নি।"
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -188,6 +233,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -218,6 +269,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -284,6 +338,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -317,6 +374,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -442,6 +502,10 @@ msgid "Command 'status' needs one argument."
 msgstr "যোগ করুন-এর একটি আর্গুমেন্ট দরকার"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "তৈরি করুন-এর কমপক্ষে ৩ টি আর্গুমেন্ট দরকার"
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "পান-এর কমপক্ষে একটি আর্গুমেন্ট দরকার"
 
@@ -496,6 +560,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr "সংরূপণ ফাইলগুলি পার্স করছে"
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "সংরূপণ ফাইলগুলি পার্স করছে"
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "সংরূপণ ফাইলগুলি পার্স করছে"
 
@@ -532,9 +600,16 @@ msgstr "শুরুর পরে"
 msgid "Default"
 msgstr ""
 
+msgid "Delete:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "সংরূপণ ফাইলগুলি পার্স করছে"
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr " CA বাদ দেওয়ায় ব্যর্থ: %1."
 
 #, fuzzy
 msgid "Deleting snapshot failed."
@@ -602,6 +677,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "Failed to parse: %s."
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Failed to parse: %s."
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -641,6 +720,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "অজ্ঞাত গ্লোবাল বিকল্প"
 
 #, fuzzy, c-format
 msgid "IO Error (%s)."
@@ -698,11 +781,19 @@ msgstr "অবৈধ প্রকার %1."
 msgid "Invalid snapshots."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "অবৈধ প্রকার %1."
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "অবৈধ প্রকার %1."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "অবৈধ প্রকার %1."
 
 #, fuzzy, c-format
@@ -721,7 +812,13 @@ msgstr "কীবোর্ড"
 msgid "KiB"
 msgstr ""
 
+msgid "List configs:"
+msgstr ""
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, fuzzy, c-format
@@ -770,6 +867,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 #, fuzzy
 msgid "No command provided."
 msgstr "কোন আদেশ দেওয়া নেই"
@@ -782,6 +882,12 @@ msgid "No permissions."
 msgstr "অনুমতি প্রত্যাখ্যাত"
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -812,6 +918,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -840,6 +949,20 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+msgid "Probing extra information for target snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "বর্ণনা"
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "অজানা"
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "I/O ত্রুটি"
@@ -854,6 +977,66 @@ msgid "Read-Only"
 msgstr ""
 
 msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+msgid "SSH User"
 msgstr ""
 
 msgid "Save status to file."
@@ -876,6 +1059,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "অবৈধ প্রকার %1."
+
+msgid "Set name of backup-config to use."
+msgstr ""
 
 msgid "Set name of config to use."
 msgstr ""
@@ -900,8 +1086,30 @@ msgid "Snapshot '%u' not found."
 msgstr "হস্ট %s পাওয়া যায় নি।"
 
 #, fuzzy
+msgid "Snapshot already on target."
+msgstr "সংরূপণ ফাইলগুলি পার্স করছে"
+
+#, fuzzy
 msgid "Snapshot is in use."
 msgstr "হস্ট %s পাওয়া যায় নি।"
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "হস্ট %s পাওয়া যায় নি।"
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "হস্ট %s পাওয়া যায় নি।"
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "হস্ট %s পাওয়া যায় নি।"
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr ""
@@ -923,6 +1131,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -936,8 +1153,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "সংরূপণ ফাইলগুলি পার্স করছে"
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "আরও তথ্যের জন্য `%s --সহায়তা' বা `%s --ব্যবহার' চেষ্টা করুন।\n"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "আরও তথ্যের জন্য `%s --সহায়তা' বা `%s --ব্যবহার' চেষ্টা করুন।\n"
 
 msgid "Try to make space available."
@@ -1067,7 +1298,25 @@ msgstr "কিছু করার নেই।"
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "আরও তথ্যের জন্য `%s --সহায়তা' বা `%s --ব্যবহার' চেষ্টা করুন।\n"
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+msgid "snbk list-configs"
+msgstr ""
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 
 msgid "yes"
