--- a/po/es.po
+++ b/po/es.po
@@ -3,12 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2024-03-19 18:42+0000\n"
-"Last-Translator: Christian Medina von Levetzow <cmedinavonlevetzow@gmail.com>"
-"\n"
-"Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/"
-">\n"
+"Last-Translator: Christian Medina von Levetzow <cmedinavonlevetzow@gmail.com>\n"
+"Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -179,10 +177,56 @@ msgstr "%1$s o %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s, %2$s"
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+#, fuzzy
+msgid "'cp info.xml' failed."
+msgstr "Error al abrir el archivo '%s'."
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 # SLE12
 #, c-format
 msgid "(Snapshot %d.)"
 msgstr "(Instantánea %d.)"
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr "--abbreviate"
@@ -192,6 +236,13 @@ msgstr "--all-configs, -a"
 
 msgid "--ambit, -a <ambit>"
 msgstr "--ambit, -a <ámbito>"
+
+msgid "--automatic"
+msgstr ""
+
+#, fuzzy
+msgid "--backup-config, -b <name>"
+msgstr "--config, -c <nombre>"
 
 msgid "--cleanup-algorithm, -c <algo>"
 msgstr "--cleanup-algorithm, -c <algoritmo>"
@@ -222,6 +273,9 @@ msgstr "--diff-cmd <comando>"
 
 msgid "--disable-used-space"
 msgstr "--disable-used-space"
+
+msgid "--empty"
+msgstr ""
 
 msgid "--extensions, -x <options>"
 msgstr "--extensions, -x <opciones>"
@@ -286,6 +340,9 @@ msgstr "--sync, -s"
 msgid "--table-style, -t <style>"
 msgstr "--table-style, -t <estilo>"
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr "--template, -t <nombre>"
 
@@ -320,6 +377,9 @@ msgstr "Permite abreviar las columnas de la tabla."
 #, c-format
 msgid "Ambit is %s."
 msgstr "El ámbito es %s."
+
+msgid "Automatic"
+msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
 msgid "B"
@@ -426,6 +486,10 @@ msgstr "El comando 'setup-quota' no tiene argumentos."
 msgid "Command 'status' needs one argument."
 msgstr "El comando 'status' necesita un argumento."
 
+#, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "El comando 'create' no tiene argumentos."
+
 msgid "Command 'umount' needs at least one argument."
 msgstr "El comando 'unmount' necesita al menos un argumento."
 
@@ -475,6 +539,10 @@ msgstr "No es posible crear espacio libre suficiente."
 msgid "Create a snapshot from the specified snapshot."
 msgstr "Crea una instantánea a partir de la instantánea especificada."
 
+#, fuzzy
+msgid "Create an empty snapshot."
+msgstr "Crea una instantánea de solo lectura."
+
 msgid "Create read-only snapshot."
 msgstr "Crea una instantánea de solo lectura."
 
@@ -511,9 +579,17 @@ msgstr "Fecha"
 msgid "Default"
 msgstr "Por defecto"
 
+#, fuzzy
+msgid "Delete:"
+msgstr "  Borrar configuración:"
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Fallo al borrar la configuración (%s)."
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "Error al eliminar la imagen."
 
 msgid "Deleting snapshot failed."
 msgstr "Error al eliminar la imagen."
@@ -586,6 +662,14 @@ msgstr "Error al inicializar el gestor del sistema de archivos."
 msgid "Failed to parse '%s'."
 msgstr "Error al analizar %s."
 
+# clients/lan_nfs_write.ycp:78
+# clients/lan_nfs_write.ycp:78
+# include/nfs/nfs_write.ycp:54
+# modules/Nfs.ycp:163
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Error al analizar %s."
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr "Error al consultar el espacio disponible para la vía \"%s\"."
@@ -627,6 +711,10 @@ msgstr "GB"
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr "GiB"
+
+#, fuzzy
+msgid "Global options:"
+msgstr "    Opciones Globales:"
 
 #, c-format
 msgid "IO Error (%s)."
@@ -682,11 +770,19 @@ msgstr "Imagen '%s' no válida."
 msgid "Invalid snapshots."
 msgstr "Imágenes inválidas."
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "Subvolumen inválido."
+
 msgid "Invalid subvolume."
 msgstr "Subvolumen inválido."
 
 #, c-format
 msgid "Invalid table style '%s'."
+msgstr "Estilo de tabla %s no válido."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "Estilo de tabla %s no válido."
 
 # SLE12
@@ -704,10 +800,15 @@ msgstr "Clave"
 msgid "KiB"
 msgstr "KiB"
 
+#, fuzzy
+msgid "List configs:"
+msgstr "  Listar configuraciones:"
+
 msgid "List snapshots from all accessible configs."
+msgstr "Muestra las instantáneas de todas las configuraciones a las que se puede acceder."
+
+msgid "List:"
 msgstr ""
-"Muestra las instantáneas de todas las configuraciones a las que se puede "
-"acceder."
 
 #, c-format
 msgid "Listing configs failed (%s)."
@@ -754,6 +855,9 @@ msgstr "Nombre"
 msgid "Name of config template to use."
 msgstr "Nombre de la plantilla de configuración que se debe usar."
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr "Ningún comando especificado."
 
@@ -765,6 +869,12 @@ msgstr "Sin permisos."
 
 msgid "Number of corresponding pre snapshot."
 msgstr "Número de la instantánea previa correspondiente."
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
+msgstr ""
 
 #, c-format
 msgid "Opening file '%s' failed."
@@ -794,6 +904,9 @@ msgstr "P"
 msgid "PB"
 msgstr "PB"
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -820,6 +933,22 @@ msgstr "Imprime el número de la segunda instantánea creada."
 msgid "Print version and exit."
 msgstr "Imprime la versión y sale."
 
+#, fuzzy
+msgid "Probing extra information for source snapshots."
+msgstr "Descripción de las instantáneas."
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "Descripción de las instantáneas."
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "Descripción de las instantáneas."
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "Descripción de las instantáneas."
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Error de cuota (%s)."
@@ -835,6 +964,67 @@ msgstr "De sólo lectura"
 
 msgid "Run command and create pre and post snapshots."
 msgstr "Ejecuta el comando y crea instantáneas previas y posteriores."
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+#, fuzzy
+msgid "SSH User"
+msgstr "Usuario"
 
 msgid "Save status to file."
 msgstr "Guarda el estado en un archivo."
@@ -854,6 +1044,10 @@ msgstr "Establece el formato de salida JSON."
 
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Define un formato de salida que puede leer el equipo (csv, json)."
+
+#, fuzzy
+msgid "Set name of backup-config to use."
+msgstr "Define el nombre de la configuración que se debe usar."
 
 msgid "Set name of config to use."
 msgstr "Define el nombre de la configuración que se debe usar."
@@ -876,9 +1070,32 @@ msgstr "Definiendo subvolumen por defecto en instantánea %d."
 msgid "Snapshot '%u' not found."
 msgstr "Imagen '%u' no encontrada."
 
+#, fuzzy
+msgid "Snapshot already on target."
+msgstr "Define la instantánea como de solo lectura."
+
 # supongo que snapshot es el nombre de un soft, por lo que lo dejo sin traducir.
 msgid "Snapshot is in use."
 msgstr "Snapshot está en uso."
+
+# supongo que snapshot es el nombre de un soft, por lo que lo dejo sin traducir.
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "Snapshot está en uso."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "Imagen '%u' no encontrada."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "Imagen '%u' no encontrada."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr "Subvolumen"
@@ -900,6 +1117,15 @@ msgstr "TB"
 msgid "Table style (integer)."
 msgstr "Estilo de tabla (número entero)."
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "El ámbito se puede especificar manualmente con la opción --ambit."
 
@@ -913,7 +1139,21 @@ msgstr "Esto puede suceder si el sistema no se ha configurado para la reversión
 msgid "TiB"
 msgstr "TiB"
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "Error al crear la imagen."
+
 msgid "Try 'snapper --help' for more information."
+msgstr "Pruebe 'snapper --help' para obtener más información."
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "Pruebe 'snapper --help' para obtener más información."
 
 msgid "Try to make space available."
@@ -1042,7 +1282,29 @@ msgstr "no hay nada que hacer"
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "El argumento root solo se puede usar junto con no-dbus.\n"
 
+#, fuzzy
+msgid "snbk delete [numbers]"
+msgstr "\tsnapper delete <número>"
+
+#, fuzzy
+msgid "snbk list"
+msgstr "\tsnapper list"
+
+#, fuzzy
+msgid "snbk list-configs"
+msgstr "\tsnapper list-configs"
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr "uso: snapper [--global-options] <comando> [--command-options] [argumentos-comando]"
+
+#, fuzzy
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "uso: snapper [--global-options] <comando> [--command-options] [argumentos-comando]"
 
 msgid "yes"
