--- a/po/hi.po
+++ b/po/hi.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2018-04-07 16:03+0000\n"
 "Last-Translator: Anshul Panwar <caspian7pena@gmail.com>\n"
 "Language-Team: Hindi <https://l10n.opensuse.org/projects/snapper/master/hi/>\n"
@@ -180,9 +180,54 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "%s '%s' नहीं मिला"
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -191,6 +236,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -221,6 +272,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -287,6 +341,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -320,6 +377,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -445,6 +505,10 @@ msgid "Command 'status' needs one argument."
 msgstr "जोड़ने में एक तर्क की जरूरत है"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "सृजन के लिए न्यूनतम 3 तर्कों की जरूरत है"
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "प्राप्त करने के लिए न्यूनतम एक तर्क की जरूरत है"
 
@@ -499,6 +563,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr "पार्सिंग समरूपण फाइलें..."
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "इसपर बना"
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "इसपर बना"
 
@@ -535,9 +603,16 @@ msgstr "तारीख: %1"
 msgid "Default"
 msgstr ""
 
+msgid "Delete:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "पार्सिंग समरूपण फाइलें..."
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "CA को मिटाया जाना असफल रहा : %1।"
 
 #, fuzzy
 msgid "Deleting snapshot failed."
@@ -605,6 +680,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "%s बनाने में विफल"
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "%s बनाने में विफल"
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -644,6 +723,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "अज्ञात ग्लोबल विकल्प"
 
 #, fuzzy, c-format
 msgid "IO Error (%s)."
@@ -701,11 +784,19 @@ msgstr "अमान्य प्रकार %1।"
 msgid "Invalid snapshots."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "अमान्य प्रकार %1।"
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "अमान्य प्रकार %1।"
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "अमान्य प्रकार %1।"
 
 #, fuzzy, c-format
@@ -724,7 +815,13 @@ msgstr "केन्या"
 msgid "KiB"
 msgstr ""
 
+msgid "List configs:"
+msgstr ""
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, fuzzy, c-format
@@ -773,6 +870,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 #, fuzzy
 msgid "No command provided."
 msgstr "कोई कमांड नहीं दी गई"
@@ -785,6 +885,12 @@ msgid "No permissions."
 msgstr "अनुमति अस्वीकृत"
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -813,6 +919,9 @@ msgstr ""
 
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
+msgstr ""
+
+msgid "Path mismatch between backup-config and config."
 msgstr ""
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
@@ -844,6 +953,21 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "इसपर बना"
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "इसपर बना"
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "अनंजान"
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "I/O त्रुटि"
@@ -858,6 +982,66 @@ msgid "Read-Only"
 msgstr ""
 
 msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+msgid "SSH User"
 msgstr ""
 
 msgid "Save status to file."
@@ -880,6 +1064,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "अमान्य प्रकार %1।"
+
+msgid "Set name of backup-config to use."
+msgstr ""
 
 msgid "Set name of config to use."
 msgstr ""
@@ -904,8 +1091,30 @@ msgid "Snapshot '%u' not found."
 msgstr "%s '%s' नहीं मिला"
 
 #, fuzzy
+msgid "Snapshot already on target."
+msgstr "पार्सिंग समरूपण फाइलें..."
+
+#, fuzzy
 msgid "Snapshot is in use."
 msgstr "%s '%s' नहीं मिला"
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "%s '%s' नहीं मिला"
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "%s '%s' नहीं मिला"
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "%s '%s' नहीं मिला"
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr ""
@@ -927,6 +1136,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -940,8 +1158,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "पार्सिंग समरूपण फाइलें..."
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "अधिक जानकारी के लिए `%s --मदद' या `%s --प्रयोग' प्रयास करें।\n"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "अधिक जानकारी के लिए `%s --मदद' या `%s --प्रयोग' प्रयास करें।\n"
 
 msgid "Try to make space available."
@@ -1070,7 +1302,25 @@ msgstr "करने के लिए कुछ नहीं है"
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "अधिक जानकारी के लिए `%s --मदद' या `%s --प्रयोग' प्रयास करें।\n"
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+msgid "snbk list-configs"
+msgstr ""
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 
 msgid "yes"
