--- a/po/km.po
+++ b/po/km.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper.km\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2011-10-24 10:40+0700\n"
 "Last-Translator: Khoem Sokhem <khoemsokhem@khmeros.info>\n"
 "Language-Team: Khmer <support@khmeros.info>\n"
@@ -192,9 +192,55 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+#, fuzzy
+msgid "'cp info.xml' failed."
+msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បើក​ឯកសារ '%s' ។"
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "រក​មិន​ឃើញ​រូបថត '%u' ។"
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -203,6 +249,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 #, fuzzy
@@ -235,6 +287,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -303,6 +358,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr "\t--table-style, -t <style>\tរចនាប័ទ្ម​តារាង​ (ចំនួន​គត់) ។"
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -338,6 +396,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -451,6 +512,10 @@ msgid "Command 'status' needs one argument."
 msgstr "ពាក្យ​បញ្ជា​ 'status' ត្រូវ​ការ​អាគុយម៉ង់​មួយ ។"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "ពាក្យ​បញ្ជា 'create' មិន​ត្រូវ​ការ​អាគុយម៉ង់ ។"
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "ពាក្យ​បញ្ជា​ 'mount' ត្រូវការ​អាគុយម៉ង់​យ៉ាង​តិច​មួយ ។"
 
@@ -503,6 +568,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត​ការ​កំណត់​រចនាសម្ព័ន្ធ (%s) ។"
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "%s ច្បាប់ ៖ មិនបានគាំទ្រ​នៅ​លើ​ប្រព័ន្ធ​បច្ចុប្បន្ន​ទេ ។\n"
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "%s ច្បាប់ ៖ មិនបានគាំទ្រ​នៅ​លើ​ប្រព័ន្ធ​បច្ចុប្បន្ន​ទេ ។\n"
 
@@ -539,9 +608,17 @@ msgstr "កាល​បរិច្ឆេទ"
 msgid "Default"
 msgstr ""
 
+#, fuzzy
+msgid "Delete:"
+msgstr "  លុប​ការ​កំណត់​រចនាសម្ព័ន្ធ ៖"
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "បាន​បរាជ័យ​ក្នុង​ការ​លុប​ការ​កំណត់​រចនាសម្ព័ន្ធ (%s) ។"
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "ការ​លុប CA បាន​បរាជ័យ ៖ %1 ។"
 
 #, fuzzy
 msgid "Deleting snapshot failed."
@@ -613,6 +690,10 @@ msgstr "បាន​បរាជ័យ​ក្នុងកា​រដំឡើ
 msgid "Failed to parse '%s'."
 msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត %s"
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត %s"
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -652,6 +733,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "    ជម្រើស​សកល ៖"
 
 # error box title
 #, fuzzy, c-format
@@ -713,11 +798,19 @@ msgstr "រូបថត​មិន​ត្រឹមត្រូវ '%s' ។"
 msgid "Invalid snapshots."
 msgstr "រូបថត​មិន​ត្រឹមត្រូវ ។"
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "ភាគ​រង​មិន​ត្រឹមត្រូវ ។"
+
 msgid "Invalid subvolume."
 msgstr "ភាគ​រង​មិន​ត្រឹមត្រូវ ។"
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "រចនាប័ទ្ម​តារាង %d មិន​ត្រឹមត្រូវ ។"
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "រចនាប័ទ្ម​តារាង %d មិន​ត្រឹមត្រូវ ។"
 
 #, fuzzy, c-format
@@ -735,7 +828,14 @@ msgstr "សោ ៖"
 msgid "KiB"
 msgstr ""
 
+#, fuzzy
+msgid "List configs:"
+msgstr "  រាយ​ការ​កំណត់​រចនាសម្ព័ន្ធ​ ៖"
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, c-format
@@ -786,6 +886,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr "\t--template, -t <name>\t\tឈ្មោះ​ពុម្ព​នៃ​ការ​កំណត់​រចនាសម្ព័ន្ធ​ដែល​ត្រូវ​ប្រើ ។"
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr "មិន​បាន​ផ្ដល់​ពាក្យ​បញ្ជា ។"
 
@@ -799,6 +902,12 @@ msgstr "(បិទ​សិទ្ធិ​ជា​​ម្ចាស់)"
 #, fuzzy
 msgid "Number of corresponding pre snapshot."
 msgstr "\t--pre-number <number>\t\tចំនួន​រូបថតពី​មុន​ដែល​ត្រូវ​គ្នា​ ។"
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
+msgstr ""
 
 #, c-format
 msgid "Opening file '%s' failed."
@@ -826,6 +935,9 @@ msgstr ""
 
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
+msgstr ""
+
+msgid "Path mismatch between backup-config and config."
 msgstr ""
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
@@ -856,6 +968,22 @@ msgstr "\t--print-number, -p\t\tបោះពុម្ព​ចំនួន​រ
 msgid "Print version and exit."
 msgstr "\t--version\t\t\tបោះ​ពុម្ព​កំណែ រួច​ចេញ ។"
 
+#, fuzzy
+msgid "Probing extra information for source snapshots."
+msgstr "កំពុង​ប្រៀបធៀប​រូបថត..."
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "កំពុង​ប្រៀបធៀប​រូបថត..."
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "កំពុង​ប្រៀបធៀប​រូបថត..."
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "កំពុង​ប្រៀបធៀប​រូបថត..."
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -875,6 +1003,63 @@ msgstr ""
 #, fuzzy
 msgid "Run command and create pre and post snapshots."
 msgstr "\t--command <command>\tដំណើរការ​ពាក្យ​បញ្ជា និង​បង្កើត​រូបថត​មុន និង​ក្រោយ ។"
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+#, fuzzy
+msgid "SSH User"
+msgstr "ទិន្នន័យ​អ្នកប្រើ"
 
 #, fuzzy
 msgid "Save status to file."
@@ -897,6 +1082,10 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "រចនាប័ទ្ម​តារាង %d មិន​ត្រឹមត្រូវ ។"
+
+#, fuzzy
+msgid "Set name of backup-config to use."
+msgstr "\t--config, -c <name>\t\tកំណត់​ឈ្មោះ​រចនាសម្ព័ន្ធ​ដែល​ត្រូវប្រើ ។"
 
 #, fuzzy
 msgid "Set name of config to use."
@@ -922,8 +1111,30 @@ msgid "Snapshot '%u' not found."
 msgstr "រក​មិន​ឃើញ​រូបថត '%u' ។"
 
 #, fuzzy
+msgid "Snapshot already on target."
+msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត​ការ​កំណត់​រចនាសម្ព័ន្ធ (%s) ។"
+
+#, fuzzy
 msgid "Snapshot is in use."
 msgstr "រក​មិន​ឃើញ​ការ​កំណត់​រចនាសម្ព័ន្ធ '%s'  ។"
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "រក​មិន​ឃើញ​ការ​កំណត់​រចនាសម្ព័ន្ធ '%s'  ។"
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "រក​មិន​ឃើញ​រូបថត '%u' ។"
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "រក​មិន​ឃើញ​រូបថត '%u' ។"
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr "ភាគ​រង"
@@ -947,6 +1158,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr "\t--table-style, -t <style>\tរចនាប័ទ្ម​តារាង​ (ចំនួន​គត់) ។"
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -960,8 +1180,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត​ការ​កំណត់​រចនាសម្ព័ន្ធ (%s) ។"
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "ចំពោះ​ព័ត៌មាន​បន្ថែម​ សូម​អាន 'ជំនួយ​របស់​កម្មវិធី​ថត' ។"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "ចំពោះ​ព័ត៌មាន​បន្ថែម​ សូម​អាន 'ជំនួយ​របស់​កម្មវិធី​ថត' ។"
 
 msgid "Try to make space available."
@@ -1091,7 +1325,29 @@ msgstr "គ្មាន​អ្វី​ត្រូវ​ធ្វើ ។"
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "ចំពោះ​ព័ត៌មាន​បន្ថែម​ សូម​អាន 'ជំនួយ​របស់​កម្មវិធី​ថត' ។"
 
+#, fuzzy
+msgid "snbk delete [numbers]"
+msgstr "\tលុប​កម្មវិធី​ថត <number>"
+
+#, fuzzy
+msgid "snbk list"
+msgstr "\tការ​រាយ​កម្មវិធី​ថត"
+
+#, fuzzy
+msgid "snbk list-configs"
+msgstr "\tការ​កំណត់​រចនាសម្ព័ន្ធ​នៃ​ការ​រាយ​កម្មវិធី​ថត"
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr "ការ​ប្រើប្រាស់ ៖ កម្មវិធី​ថតរូប [--global-options] <command> [--command-options] [command-arguments]"
+
+#, fuzzy
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "ការ​ប្រើប្រាស់ ៖ កម្មវិធី​ថតរូប [--global-options] <command> [--command-options] [command-arguments]"
 
 msgid "yes"
