--- a/po/nb.po
+++ b/po/nb.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2013-10-04 18:20+0200\n"
 "Last-Translator: Olav Pettershagen <olpetter@bbnett.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
@@ -188,9 +188,55 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+#, fuzzy
+msgid "'cp info.xml' failed."
+msgstr "Filen '%s' kunne ikke åpnes."
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "Øyeblikksbildet '%u' ikke funnet."
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -199,6 +245,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 #, fuzzy
@@ -231,6 +283,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -299,6 +354,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr "\t--table-style, -t <style>\tTabellformat (heltall)."
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -335,6 +393,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -445,6 +506,10 @@ msgid "Command 'status' needs one argument."
 msgstr "Kommandoen 'status' trenger ett argument."
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "Kommandoen 'create' tar ikke argumenter."
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "Kommandoen 'mount' trenger minst ett argument."
 
@@ -494,6 +559,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr "Diskbilde kunne ikke opprettes."
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "%s -regel støttes ikke på dette systemet.\n"
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "%s -regel støttes ikke på dette systemet.\n"
 
@@ -529,9 +598,17 @@ msgstr "Dato"
 msgid "Default"
 msgstr ""
 
+#, fuzzy
+msgid "Delete:"
+msgstr "  Slette oppsett:"
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Oppsett kunne ikke slettes (%s)."
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "Diskbilde kunne ikke slettes."
 
 msgid "Deleting snapshot failed."
 msgstr "Diskbilde kunne ikke slettes."
@@ -603,6 +680,10 @@ msgstr "Kunne ikke install filhåndterer"
 msgid "Failed to parse '%s'."
 msgstr "kunne ikke opprette %s"
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "kunne ikke opprette %s"
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -642,6 +723,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "    Globale valg:"
 
 # error box title
 #, fuzzy, c-format
@@ -702,11 +787,19 @@ msgstr "Ugyldig øyeblikksbilde '%s'."
 msgid "Invalid snapshots."
 msgstr "Ugyldige øyeblikksbilder."
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "Ugyldig undervolum."
+
 msgid "Invalid subvolume."
 msgstr "Ugyldig undervolum."
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "Ugyldig tabellstil %d."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "Ugyldig tabellstil %d."
 
 #, fuzzy, c-format
@@ -723,7 +816,14 @@ msgstr "Nøkkel"
 msgid "KiB"
 msgstr ""
 
+#, fuzzy
+msgid "List configs:"
+msgstr "  Vise oppsett:"
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, c-format
@@ -774,6 +874,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr "\t--template, -t <navn>\t\tNavn på oppsettmal som skal brukes."
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr "Ingen kommando gitt"
 
@@ -786,6 +889,12 @@ msgstr "Ikke autorisert."
 #, fuzzy
 msgid "Number of corresponding pre snapshot."
 msgstr "\t--pre-number <antall>\t\tAntall samsvarende før øyeblikksbilde."
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
+msgstr ""
 
 #, c-format
 msgid "Opening file '%s' failed."
@@ -816,6 +925,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -844,6 +956,22 @@ msgstr "\t--print-number, -p\t\tVis antall opprettede øyeblikksbilder."
 msgid "Print version and exit."
 msgstr "\t--version\t\t\tVis versjon og avslutt."
 
+#, fuzzy
+msgid "Probing extra information for source snapshots."
+msgstr "sammenligner øyeblikksbilder..."
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "sammenligner øyeblikksbilder..."
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "sammenligner øyeblikksbilder..."
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "sammenligner øyeblikksbilder..."
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -863,6 +991,67 @@ msgstr ""
 #, fuzzy
 msgid "Run command and create pre and post snapshots."
 msgstr "\t--command <kommando>\tKjør kommandoen og opprette før- og etter-øyeblikksbilder."
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+#, fuzzy
+msgid "SSH User"
+msgstr "Bruker"
 
 #, fuzzy
 msgid "Save status to file."
@@ -887,6 +1076,10 @@ msgid "Set a machine-readable output format (csv, json)."
 msgstr "Ugyldig tabellstil %d."
 
 #, fuzzy
+msgid "Set name of backup-config to use."
+msgstr "\t--config, -c <navn>\t\tNavn som skal brukes i oppsettet."
+
+#, fuzzy
 msgid "Set name of config to use."
 msgstr "\t--config, -c <navn>\t\tNavn som skal brukes i oppsettet."
 
@@ -909,8 +1102,30 @@ msgstr ""
 msgid "Snapshot '%u' not found."
 msgstr "Øyeblikksbildet '%u' ikke funnet."
 
+#, fuzzy
+msgid "Snapshot already on target."
+msgstr "Diskbilde kunne ikke opprettes."
+
 msgid "Snapshot is in use."
 msgstr "Øyeblikksbildet er i bruk."
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "Øyeblikksbildet er i bruk."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "Øyeblikksbildet '%u' ikke funnet."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "Øyeblikksbildet '%u' ikke funnet."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr "Undervolum"
@@ -934,6 +1149,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr "\t--table-style, -t <style>\tTabellformat (heltall)."
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -947,7 +1171,21 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "Diskbilde kunne ikke opprettes."
+
 msgid "Try 'snapper --help' for more information."
+msgstr "Forsøk 'snapper --help' for mer informasjon."
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "Forsøk 'snapper --help' for mer informasjon."
 
 msgid "Try to make space available."
@@ -1074,7 +1312,29 @@ msgstr "Ingenting å gjøre"
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Forsøk 'snapper --help' for mer informasjon."
 
+#, fuzzy
+msgid "snbk delete [numbers]"
+msgstr "\tsnapper delete <nummer>"
+
+#, fuzzy
+msgid "snbk list"
+msgstr "\tsnapper list"
+
+#, fuzzy
+msgid "snbk list-configs"
+msgstr "\tsnapper list-configs"
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr "bruk: snapper [--globale valg] <kommando> [--kommandovalg] [kommandoargumenter]"
+
+#, fuzzy
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "bruk: snapper [--globale valg] <kommando> [--kommandovalg] [kommandoargumenter]"
 
 msgid "yes"
