--- a/po/pt.po
+++ b/po/pt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2018-06-01 11:05+0000\n"
 "Last-Translator: Jiri Machalek <jiri.machalek@tieto.com>\n"
 "Language-Team: Portuguese <https://l10n.opensuse.org/projects/snapper/master/pt/>\n"
@@ -200,8 +200,53 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, c-format
 msgid "(Snapshot %d.)"
+msgstr ""
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
 msgstr ""
 
 msgid "--abbreviate"
@@ -211,6 +256,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -241,6 +292,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -307,6 +361,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -339,6 +396,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -462,6 +522,10 @@ msgid "Command 'status' needs one argument."
 msgstr "add necessita um argumento"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "create necessita pelo menos 3 argumentos"
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "get necessita pelo menos um argumento"
 
@@ -515,6 +579,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr ""
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "Criado em: "
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "Criado em: "
 
@@ -550,9 +618,19 @@ msgstr "Data: %1"
 msgid "Default"
 msgstr ""
 
+#, fuzzy
+msgid "Delete:"
+msgstr ""
+"%s - criar ficheiros de configuração PAM\n"
+"\n"
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Falha na leitura do ficheiro de configuração"
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "Falha ao apagar o CA: %1"
 
 #, fuzzy
 msgid "Deleting snapshot failed."
@@ -619,6 +697,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "Falha na criação de um processo"
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Falha na criação de um processo"
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -659,6 +741,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "Opções do Módulo Global:\n"
 
 # error box title
 #, fuzzy, c-format
@@ -718,11 +804,19 @@ msgstr "Estilo de tabela inválido %d."
 msgid "Invalid snapshots."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "Estilo de tabela inválido %d."
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "Estilo de tabela inválido %d."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "Estilo de tabela inválido %d."
 
 #, fuzzy, c-format
@@ -742,7 +836,16 @@ msgstr "Quénia"
 msgid "KiB"
 msgstr ""
 
+#, fuzzy
+msgid "List configs:"
+msgstr ""
+"%s - criar ficheiros de configuração PAM\n"
+"\n"
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, fuzzy, c-format
@@ -791,6 +894,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 #, fuzzy
 msgid "No command provided."
 msgstr "Não foi introduzido nenhum comando"
@@ -803,6 +909,12 @@ msgid "No permissions."
 msgstr "(permissões do proprietário desligadas)"
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -831,6 +943,9 @@ msgstr ""
 
 #. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
 msgid "PB"
+msgstr ""
+
+msgid "Path mismatch between backup-config and config."
 msgstr ""
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
@@ -863,6 +978,21 @@ msgstr ""
 msgid "Print version and exit."
 msgstr "Mostrar a versão do programa e sair"
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "Criado em: "
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "Criado em: "
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "Tipo desconhecido."
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -879,6 +1009,67 @@ msgstr ""
 
 msgid "Run command and create pre and post snapshots."
 msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+#, fuzzy
+msgid "SSH User"
+msgstr "Nome de Utilizador"
 
 msgid "Save status to file."
 msgstr ""
@@ -900,6 +1091,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Estilo de tabela inválido %d."
+
+msgid "Set name of backup-config to use."
+msgstr ""
 
 msgid "Set name of config to use."
 msgstr ""
@@ -923,7 +1117,29 @@ msgstr ""
 msgid "Snapshot '%u' not found."
 msgstr "%s '%s' não encontrado."
 
+#, fuzzy
+msgid "Snapshot already on target."
+msgstr "Falha na leitura do ficheiro de configuração"
+
 msgid "Snapshot is in use."
+msgstr ""
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "%s '%s' não encontrado."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "%s '%s' não encontrado."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "%s '%s' não encontrado."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
 msgstr ""
 
 msgid "Subvolume"
@@ -946,6 +1162,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -959,8 +1184,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "Falha na leitura do ficheiro de configuração"
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "Tente `%s --help' ou `%s --usage' para mais informações.\n"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "Tente `%s --help' ou `%s --usage' para mais informações.\n"
 
 msgid "Try to make space available."
@@ -1091,7 +1330,31 @@ msgstr "Nada para fazer."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Tente `%s --help' ou `%s --usage' para mais informações.\n"
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+#, fuzzy
+msgid "snbk list-configs"
+msgstr ""
+"%s - criar ficheiros de configuração PAM\n"
+"\n"
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+"Uso:\n"
+"\tsnapper [--opções-globais] <command> [--opções do comando] [argumentos]"
+
+#, fuzzy
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 "Uso:\n"
 "\tsnapper [--opções-globais] <command> [--opções do comando] [argumentos]"
