--- a/po/snapper.pot
+++ b/po/snapper.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -179,8 +179,53 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, c-format
 msgid "(Snapshot %d.)"
+msgstr ""
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
 msgstr ""
 
 msgid "--abbreviate"
@@ -190,6 +235,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -220,6 +271,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -285,6 +339,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -317,6 +374,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -421,6 +481,9 @@ msgstr ""
 msgid "Command 'status' needs one argument."
 msgstr ""
 
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr ""
+
 msgid "Command 'umount' needs at least one argument."
 msgstr ""
 
@@ -468,6 +531,9 @@ msgstr ""
 msgid "Create a snapshot from the specified snapshot."
 msgstr ""
 
+msgid "Create an empty snapshot."
+msgstr ""
+
 msgid "Create read-only snapshot."
 msgstr ""
 
@@ -500,8 +566,15 @@ msgstr ""
 msgid "Default"
 msgstr ""
 
+msgid "Delete:"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
+msgstr ""
+
+#, c-format
+msgid "Deleting snapshot %d."
 msgstr ""
 
 msgid "Deleting snapshot failed."
@@ -566,6 +639,9 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr ""
 
+msgid "Failed to parse number."
+msgstr ""
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -601,6 +677,9 @@ msgstr ""
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
+msgstr ""
+
+msgid "Global options:"
 msgstr ""
 
 #, c-format
@@ -656,11 +735,19 @@ msgstr ""
 msgid "Invalid snapshots."
 msgstr ""
 
+#, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr ""
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, c-format
 msgid "Invalid table style '%s'."
+msgstr ""
+
+#, c-format
+msgid "Invalid target mode '%s'."
 msgstr ""
 
 #, c-format
@@ -677,7 +764,13 @@ msgstr ""
 msgid "KiB"
 msgstr ""
 
+msgid "List configs:"
+msgstr ""
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, c-format
@@ -725,6 +818,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr ""
 
@@ -735,6 +831,12 @@ msgid "No permissions."
 msgstr ""
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -765,6 +867,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -790,6 +895,18 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+msgid "Probing extra information for target snapshots."
+msgstr ""
+
+msgid "Probing source snapshots."
+msgstr ""
+
+msgid "Probing target snapshots."
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr ""
@@ -804,6 +921,66 @@ msgid "Read-Only"
 msgstr ""
 
 msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+msgid "SSH User"
 msgstr ""
 
 msgid "Save status to file."
@@ -823,6 +1000,9 @@ msgid "Set JSON output format."
 msgstr ""
 
 msgid "Set a machine-readable output format (csv, json)."
+msgstr ""
+
+msgid "Set name of backup-config to use."
 msgstr ""
 
 msgid "Set name of config to use."
@@ -845,7 +1025,26 @@ msgstr ""
 msgid "Snapshot '%u' not found."
 msgstr ""
 
+msgid "Snapshot already on target."
+msgstr ""
+
 msgid "Snapshot is in use."
+msgstr ""
+
+msgid "Snapshot not on source."
+msgstr ""
+
+msgid "Snapshot not on target."
+msgstr ""
+
+#, c-format
+msgid "Snapshot number %d not found."
+msgstr ""
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
 msgstr ""
 
 msgid "Subvolume"
@@ -868,6 +1067,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -881,7 +1089,20 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, c-format
+msgid "Transferring snapshot %d."
+msgstr ""
+
 msgid "Try 'snapper --help' for more information."
+msgstr ""
+
+msgid "Try 'snbk --help' for more information."
 msgstr ""
 
 msgid "Try to make space available."
@@ -1003,7 +1224,25 @@ msgstr ""
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+msgid "snbk list-configs"
+msgstr ""
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 
 msgid "yes"
