--- a/po/ta.po
+++ b/po/ta.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2024-06-07 01:46+0000\n"
 "Last-Translator: Rajasekaran Karunanithi <rajasekaran86@gmail.com>\n"
-"Language-Team: Tamil <https://l10n.opensuse.org/projects/snapper/master/ta/>"
-"\n"
+"Language-Team: Tamil <https://l10n.opensuse.org/projects/snapper/master/ta/>\n"
 "Language: ta\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -185,9 +184,54 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "புரவலன் %s காணப்படவில்லை."
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -196,6 +240,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -226,6 +276,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -292,6 +345,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -325,6 +381,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -450,6 +509,10 @@ msgid "Command 'status' needs one argument."
 msgstr "கூடுதல் சேர்ப்புக்கு ஒரு பயனிலை தேவை"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "உருவாக்கவுமிற்கு குறைந்தபட்சம் 3 பயனிலைகள் தேவை"
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "get-க்கு குறைந்தபட்சம் ஒரு பயனிலை தேவை"
 
@@ -504,6 +567,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr "உள்ளமைவு கோப்புகள் விளக்கப்படுகின்றன..."
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "உள்ளமைவு கோப்புகள் விளக்கப்படுகின்றன..."
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "உள்ளமைவு கோப்புகள் விளக்கப்படுகின்றன..."
 
@@ -539,9 +606,16 @@ msgstr "தேதி"
 msgid "Default"
 msgstr "இயல்புநிலை"
 
+msgid "Delete:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "உள்ளமைவு கோப்புகள் விளக்கப்படுகின்றன..."
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "சிடீ நீக்கப்படுதல் தோல்வியுற்றது: %1."
 
 #, fuzzy
 msgid "Deleting snapshot failed."
@@ -609,6 +683,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "Failed to parse: %s."
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Failed to parse: %s."
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -648,6 +726,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "தெரியாத உலகமய விருப்பத்தேர்வு "
 
 #, fuzzy, c-format
 msgid "IO Error (%s)."
@@ -705,11 +787,19 @@ msgstr "செல்லாத வகை %1."
 msgid "Invalid snapshots."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "செல்லாத வகை %1."
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "செல்லாத வகை %1."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "செல்லாத வகை %1."
 
 #, fuzzy, c-format
@@ -728,7 +818,13 @@ msgstr "கென்யா"
 msgid "KiB"
 msgstr ""
 
+msgid "List configs:"
+msgstr ""
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, fuzzy, c-format
@@ -777,6 +873,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 #, fuzzy
 msgid "No command provided."
 msgstr "ஆணை எதுவும் கொடுக்கப்படவில்லை"
@@ -789,6 +888,12 @@ msgid "No permissions."
 msgstr "அனுமதிகள் மறுக்கப்படுகின்றன"
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -819,6 +924,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -847,6 +955,20 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+msgid "Probing extra information for target snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "விளக்கம்"
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "அறிந்திராத வகை."
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "ஐ/ஓ தவறு"
@@ -861,6 +983,66 @@ msgid "Read-Only"
 msgstr ""
 
 msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+msgid "SSH User"
 msgstr ""
 
 msgid "Save status to file."
@@ -883,6 +1065,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "செல்லாத வகை %1."
+
+msgid "Set name of backup-config to use."
+msgstr ""
 
 msgid "Set name of config to use."
 msgstr ""
@@ -907,8 +1092,30 @@ msgid "Snapshot '%u' not found."
 msgstr "புரவலன் %s காணப்படவில்லை."
 
 #, fuzzy
+msgid "Snapshot already on target."
+msgstr "உள்ளமைவு கோப்புகள் விளக்கப்படுகின்றன..."
+
+#, fuzzy
 msgid "Snapshot is in use."
 msgstr "புரவலன் %s காணப்படவில்லை."
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "புரவலன் %s காணப்படவில்லை."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "புரவலன் %s காணப்படவில்லை."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "புரவலன் %s காணப்படவில்லை."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr ""
@@ -930,6 +1137,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -943,8 +1159,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "உள்ளமைவு கோப்புகள் விளக்கப்படுகின்றன..."
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "கூடுதல் தகவலுக்கு`%s --உதவி' அல்லது`%s –பயன்பாடு'வை முயற்சிக்கவும்.\n"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "கூடுதல் தகவலுக்கு`%s --உதவி' அல்லது`%s –பயன்பாடு'வை முயற்சிக்கவும்.\n"
 
 msgid "Try to make space available."
@@ -1074,7 +1304,25 @@ msgstr "செய்வதற்கு ஏதுமில்லை."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "கூடுதல் தகவலுக்கு`%s --உதவி' அல்லது`%s –பயன்பாடு'வை முயற்சிக்கவும்.\n"
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+msgid "snbk list-configs"
+msgstr ""
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 
 msgid "yes"
