--- a/po/xh.po
+++ b/po/xh.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: base\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2006-11-03 14:26\n"
 "Last-Translator: Novell Language <language@novell.com>\n"
 "Language-Team: Novell Language <language@novell.com>\n"
@@ -180,9 +180,54 @@ msgstr ""
 msgid "%1$s, %2$s"
 msgstr ""
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+msgid "'cp info.xml' failed."
+msgstr ""
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "Umamkeli %s akafunyenwanga."
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr ""
@@ -191,6 +236,12 @@ msgid "--all-configs, -a"
 msgstr ""
 
 msgid "--ambit, -a <ambit>"
+msgstr ""
+
+msgid "--automatic"
+msgstr ""
+
+msgid "--backup-config, -b <name>"
 msgstr ""
 
 msgid "--cleanup-algorithm, -c <algo>"
@@ -221,6 +272,9 @@ msgid "--diff-cmd <command>"
 msgstr ""
 
 msgid "--disable-used-space"
+msgstr ""
+
+msgid "--empty"
 msgstr ""
 
 msgid "--extensions, -x <options>"
@@ -287,6 +341,9 @@ msgstr ""
 msgid "--table-style, -t <style>"
 msgstr ""
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr ""
 
@@ -320,6 +377,9 @@ msgstr ""
 
 #, c-format
 msgid "Ambit is %s."
+msgstr ""
+
+msgid "Automatic"
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -445,6 +505,10 @@ msgid "Command 'status' needs one argument."
 msgstr "ukufaka kufuna impikiswano enye"
 
 #, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "ukudala kufuna nje iimpikiswano ezi-3"
+
+#, fuzzy
 msgid "Command 'umount' needs at least one argument."
 msgstr "ukufumana kufuna nje impikiswano enye"
 
@@ -499,6 +563,10 @@ msgid "Create a snapshot from the specified snapshot."
 msgstr "Kwahlulwa iifayili zobumbeko..."
 
 #, fuzzy
+msgid "Create an empty snapshot."
+msgstr "Kwahlulwa iifayili zobumbeko..."
+
+#, fuzzy
 msgid "Create read-only snapshot."
 msgstr "Kwahlulwa iifayili zobumbeko..."
 
@@ -535,9 +603,16 @@ msgstr "Ukuqalisa kwasemva"
 msgid "Default"
 msgstr ""
 
+msgid "Delete:"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Kwahlulwa iifayili zobumbeko..."
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "Ukucinywa kwe-CA kusilele: %1."
 
 #, fuzzy
 msgid "Deleting snapshot failed."
@@ -606,6 +681,10 @@ msgstr ""
 msgid "Failed to parse '%s'."
 msgstr "Failed to parse: %s."
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "Failed to parse: %s."
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr ""
@@ -646,6 +725,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
+
+#, fuzzy
+msgid "Global options:"
+msgstr "Isikhethwa sehlabathi esingaziwa"
 
 # error box title
 #, fuzzy, c-format
@@ -705,11 +788,19 @@ msgstr "Uhlobo %1.alusebenziseki."
 msgid "Invalid snapshots."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "Uhlobo %1.alusebenziseki."
+
 msgid "Invalid subvolume."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid table style '%s'."
+msgstr "Uhlobo %1.alusebenziseki."
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "Uhlobo %1.alusebenziseki."
 
 #, fuzzy, c-format
@@ -728,7 +819,13 @@ msgstr "i-Kenya"
 msgid "KiB"
 msgstr ""
 
+msgid "List configs:"
+msgstr ""
+
 msgid "List snapshots from all accessible configs."
+msgstr ""
+
+msgid "List:"
 msgstr ""
 
 #, fuzzy, c-format
@@ -777,6 +874,9 @@ msgstr ""
 msgid "Name of config template to use."
 msgstr ""
 
+msgid "No backup configs found."
+msgstr ""
+
 #, fuzzy
 msgid "No command provided."
 msgstr "Akukho myalelo unikezelweyo"
@@ -789,6 +889,12 @@ msgid "No permissions."
 msgstr "Iimvume zaliwe"
 
 msgid "Number of corresponding pre snapshot."
+msgstr ""
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
 msgstr ""
 
 #, c-format
@@ -819,6 +925,9 @@ msgstr ""
 msgid "PB"
 msgstr ""
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -847,6 +956,20 @@ msgstr ""
 msgid "Print version and exit."
 msgstr ""
 
+msgid "Probing extra information for source snapshots."
+msgstr ""
+
+msgid "Probing extra information for target snapshots."
+msgstr ""
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "Inkcazelo"
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "Uhlobo olungaziwayo."
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -862,6 +985,66 @@ msgid "Read-Only"
 msgstr ""
 
 msgid "Run command and create pre and post snapshots."
+msgstr ""
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+msgid "SSH User"
 msgstr ""
 
 msgid "Save status to file."
@@ -884,6 +1067,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Uhlobo %1.alusebenziseki."
+
+msgid "Set name of backup-config to use."
+msgstr ""
 
 msgid "Set name of config to use."
 msgstr ""
@@ -908,8 +1094,30 @@ msgid "Snapshot '%u' not found."
 msgstr "Umamkeli %s akafunyenwanga."
 
 #, fuzzy
+msgid "Snapshot already on target."
+msgstr "Kwahlulwa iifayili zobumbeko..."
+
+#, fuzzy
 msgid "Snapshot is in use."
 msgstr "Umamkeli %s akafunyenwanga."
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "Umamkeli %s akafunyenwanga."
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "Umamkeli %s akafunyenwanga."
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "Umamkeli %s akafunyenwanga."
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr ""
@@ -931,6 +1139,15 @@ msgstr ""
 msgid "Table style (integer)."
 msgstr ""
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
@@ -944,8 +1161,22 @@ msgstr ""
 msgid "TiB"
 msgstr ""
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "Kwahlulwa iifayili zobumbeko..."
+
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
+msgstr "Try `%s --help' or `%s --usage' for more information.\n"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "Try `%s --help' or `%s --usage' for more information.\n"
 
 msgid "Try to make space available."
@@ -1075,7 +1306,25 @@ msgstr "Akukho nto yakwenza."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Try `%s --help' or `%s --usage' for more information.\n"
 
+msgid "snbk delete [numbers]"
+msgstr ""
+
+msgid "snbk list"
+msgstr ""
+
+msgid "snbk list-configs"
+msgstr ""
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr ""
 
 msgid "yes"
