--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9,11 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2024-03-04 06:42+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
-"Language-Team: Chinese (China) <https://l10n.opensuse.org/projects/snapper/"
-"master/zh_CN/>\n"
+"Language-Team: Chinese (China) <https://l10n.opensuse.org/projects/snapper/master/zh_CN/>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -182,9 +181,55 @@ msgstr "%1$s 或 %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s，%2$s"
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+#, fuzzy
+msgid "'cp info.xml' failed."
+msgstr "打开文件 '%s' 失败。"
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 #, c-format
 msgid "(Snapshot %d.)"
 msgstr "(快照 '%d'。)"
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr "--abbreviate"
@@ -194,6 +239,13 @@ msgstr "--all-configs、-a"
 
 msgid "--ambit, -a <ambit>"
 msgstr "--ambit、-a <范围>"
+
+msgid "--automatic"
+msgstr ""
+
+#, fuzzy
+msgid "--backup-config, -b <name>"
+msgstr "--config、-c <名称>"
 
 msgid "--cleanup-algorithm, -c <algo>"
 msgstr "--cleanup-algorithm、-c <算法>"
@@ -224,6 +276,9 @@ msgstr "--diff-cmd <命令>"
 
 msgid "--disable-used-space"
 msgstr "--disable-used-space"
+
+msgid "--empty"
+msgstr ""
 
 msgid "--extensions, -x <options>"
 msgstr "--extensions、-x <选项>"
@@ -288,6 +343,9 @@ msgstr "--sync、-s"
 msgid "--table-style, -t <style>"
 msgstr "--table-style、-t <样式>"
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr "--template、-t <名称>"
 
@@ -322,6 +380,9 @@ msgstr "允许使用表格各列的缩写。"
 #, c-format
 msgid "Ambit is %s."
 msgstr "范围是 %s。"
+
+msgid "Automatic"
+msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
 msgid "B"
@@ -425,6 +486,10 @@ msgstr "命令“setup-quota”不需要参数。"
 msgid "Command 'status' needs one argument."
 msgstr "命令 'status' 需要一个参数。"
 
+#, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "命令 'create' 不接受参数。"
+
 msgid "Command 'umount' needs at least one argument."
 msgstr "命令“unmount”至少需要一个参数。"
 
@@ -472,6 +537,10 @@ msgstr "无法释放足够多的可用空间。"
 msgid "Create a snapshot from the specified snapshot."
 msgstr "基于指定的快照创建快照。"
 
+#, fuzzy
+msgid "Create an empty snapshot."
+msgstr "创建只读快照。"
+
 msgid "Create read-only snapshot."
 msgstr "创建只读快照。"
 
@@ -504,9 +573,17 @@ msgstr "日期"
 msgid "Default"
 msgstr "默认值"
 
+#, fuzzy
+msgid "Delete:"
+msgstr "  删除配置："
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "删除配置失败 (%s)。"
+
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "删除快照失败。"
 
 msgid "Deleting snapshot failed."
 msgstr "删除快照失败。"
@@ -569,6 +646,10 @@ msgstr "初始化文件系统处理器失败。"
 msgid "Failed to parse '%s'."
 msgstr "分析 \"%s\" 失败。"
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "分析 \"%s\" 失败。"
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr "查询路径 \"%s\" 的可用空间失败。"
@@ -605,6 +686,10 @@ msgstr "GB"
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr "GiB"
+
+#, fuzzy
+msgid "Global options:"
+msgstr "    全局选项："
 
 #, c-format
 msgid "IO Error (%s)."
@@ -659,11 +744,19 @@ msgstr "无效的快照 '%s'。"
 msgid "Invalid snapshots."
 msgstr "无效的快照。"
 
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "无效的子卷。"
+
 msgid "Invalid subvolume."
 msgstr "无效的子卷。"
 
 #, c-format
 msgid "Invalid table style '%s'."
+msgstr "表格样式 \"%s\" 无效。"
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "表格样式 \"%s\" 无效。"
 
 #, c-format
@@ -680,8 +773,15 @@ msgstr "键"
 msgid "KiB"
 msgstr "KiB"
 
+#, fuzzy
+msgid "List configs:"
+msgstr "  列出配置："
+
 msgid "List snapshots from all accessible configs."
 msgstr "列出所有可访问配置中的快照。"
+
+msgid "List:"
+msgstr ""
 
 #, c-format
 msgid "Listing configs failed (%s)."
@@ -728,6 +828,9 @@ msgstr "名称"
 msgid "Name of config template to use."
 msgstr "要使用的配置模板名称。"
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr "没有提供这个命令。"
 
@@ -739,6 +842,12 @@ msgstr "无权限。"
 
 msgid "Number of corresponding pre snapshot."
 msgstr "相关前期快照的编号。"
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
+msgstr ""
 
 #, c-format
 msgid "Opening file '%s' failed."
@@ -768,6 +877,9 @@ msgstr "P"
 msgid "PB"
 msgstr "PB"
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -793,6 +905,22 @@ msgstr "列显所创建的第二个快照的编号。"
 msgid "Print version and exit."
 msgstr "列显版本号并退出。"
 
+#, fuzzy
+msgid "Probing extra information for source snapshots."
+msgstr "快照的说明。"
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "快照的说明。"
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "快照的说明。"
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "快照的说明。"
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "定额错误 (%s)。"
@@ -808,6 +936,63 @@ msgstr "只读"
 
 msgid "Run command and create pre and post snapshots."
 msgstr "运行命令并创建前期和后期快照。"
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+#, fuzzy
+msgid "SSH User"
+msgstr "用户"
 
 msgid "Save status to file."
 msgstr "将状态保存到文件。"
@@ -827,6 +1012,10 @@ msgstr "设置 JSON 输出格式。"
 
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "设置计算机可读的输出格式（csv、json）。"
+
+#, fuzzy
+msgid "Set name of backup-config to use."
+msgstr "设置要使用的配置名称。"
 
 msgid "Set name of config to use."
 msgstr "设置要使用的配置名称。"
@@ -848,8 +1037,30 @@ msgstr "正在设置默认子卷为快照 %d。"
 msgid "Snapshot '%u' not found."
 msgstr "未找到快照 '%u'。"
 
+#, fuzzy
+msgid "Snapshot already on target."
+msgstr "将快照设为只读模式。"
+
 msgid "Snapshot is in use."
 msgstr "快照正在使用中。"
+
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "快照正在使用中。"
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "未找到快照 '%u'。"
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "未找到快照 '%u'。"
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 msgid "Subvolume"
 msgstr "子卷"
@@ -871,6 +1082,15 @@ msgstr "TB"
 msgid "Table style (integer)."
 msgstr "表格样式 (整数)。"
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "可以使用 --ambit 选项手动指定范围。"
 
@@ -884,7 +1104,21 @@ msgstr "如果系统未设置为回滚，就可能发生此情况。"
 msgid "TiB"
 msgstr "TiB"
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "创建快照失败。"
+
 msgid "Try 'snapper --help' for more information."
+msgstr "更多信息可尝试 'snapper --help'。"
+
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "更多信息可尝试 'snapper --help'。"
 
 msgid "Try to make space available."
@@ -1006,7 +1240,29 @@ msgstr "无事可做"
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "root 参数只能与 no-dbus 一起使用。\n"
 
+#, fuzzy
+msgid "snbk delete [numbers]"
+msgstr "\tsnapper delete <编号>"
+
+#, fuzzy
+msgid "snbk list"
+msgstr "\tsnapper list"
+
+#, fuzzy
+msgid "snbk list-configs"
+msgstr "\tsnapper list-configs"
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr "用法：snapper [--全局选项] <命令> [--命令选项] [命令参数]"
+
+#, fuzzy
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "用法：snapper [--全局选项] <命令> [--命令选项] [命令参数]"
 
 msgid "yes"
