--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 12:27+0100\n"
+"POT-Creation-Date: 2024-11-07 08:23+0100\n"
 "PO-Revision-Date: 2024-03-04 13:42+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
-"Language-Team: Chinese (Taiwan) <https://l10n.opensuse.org/projects/snapper/"
-"master/zh_TW/>\n"
+"Language-Team: Chinese (Taiwan) <https://l10n.opensuse.org/projects/snapper/master/zh_TW/>\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -197,10 +196,56 @@ msgstr "%1$s 或 %2$s"
 msgid "%1$s, %2$s"
 msgstr "%1$s，%2$s"
 
+msgid "'btrfs send | btrfs receive' failed."
+msgstr ""
+
+msgid "'btrfs subvolume delete' failed."
+msgstr ""
+
+#, fuzzy
+msgid "'cp info.xml' failed."
+msgstr "開啟檔案 '%s' 失敗。"
+
+msgid "'mkdir' failed."
+msgstr ""
+
+msgid "'rm info.xml' failed."
+msgstr ""
+
+msgid "'rmdir' failed."
+msgstr ""
+
+msgid "'scp info.xml' failed."
+msgstr ""
+
 # SLE12
 #, c-format
 msgid "(Snapshot %d.)"
 msgstr "(快照 %d。)"
+
+msgid "(Source) Creation Time"
+msgstr ""
+
+msgid "(Source) Parent UUID"
+msgstr ""
+
+msgid "(Source) Received UUID"
+msgstr ""
+
+msgid "(Source) UUID"
+msgstr ""
+
+msgid "(Target) Creation Time"
+msgstr ""
+
+msgid "(Target) Parent UUID"
+msgstr ""
+
+msgid "(Target) Received UUID"
+msgstr ""
+
+msgid "(Target) UUID"
+msgstr ""
 
 msgid "--abbreviate"
 msgstr "--abbreviate"
@@ -210,6 +255,13 @@ msgstr "--all-configs、-a"
 
 msgid "--ambit, -a <ambit>"
 msgstr "--ambit、-a <範圍>"
+
+msgid "--automatic"
+msgstr ""
+
+#, fuzzy
+msgid "--backup-config, -b <name>"
+msgstr "--config、-c <名稱>"
 
 msgid "--cleanup-algorithm, -c <algo>"
 msgstr "--cleanup-algorithm、-c <演算法>"
@@ -240,6 +292,9 @@ msgstr "--diff-cmd <指令>"
 
 msgid "--disable-used-space"
 msgstr "--disable-used-space"
+
+msgid "--empty"
+msgstr ""
 
 msgid "--extensions, -x <options>"
 msgstr "--extensions、-x <選項>"
@@ -304,6 +359,9 @@ msgstr "--sync、-s"
 msgid "--table-style, -t <style>"
 msgstr "--table-style、-t <樣式>"
 
+msgid "--target-mode <target-mode>"
+msgstr ""
+
 msgid "--template, -t <name>"
 msgstr "--template、-t <名稱>"
 
@@ -338,6 +396,9 @@ msgstr "允許使用表格各欄的縮寫。"
 #, c-format
 msgid "Ambit is %s."
 msgstr "範圍是 %s。"
+
+msgid "Automatic"
+msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
 msgid "B"
@@ -449,6 +510,10 @@ msgstr "指令「setup-quota」不需要引數。"
 msgid "Command 'status' needs one argument."
 msgstr "命令 'status' 需要一個參數。"
 
+#, fuzzy
+msgid "Command 'transfer-and-delete' does not take arguments."
+msgstr "命令 'create' 不需參數。"
+
 msgid "Command 'umount' needs at least one argument."
 msgstr "指令「umount」至少需要一個引數。"
 
@@ -502,6 +567,10 @@ msgstr "無法釋放足夠多的可用空間。"
 msgid "Create a snapshot from the specified snapshot."
 msgstr "依據指定快照建立快照。"
 
+#, fuzzy
+msgid "Create an empty snapshot."
+msgstr "建立唯讀快照。"
+
 msgid "Create read-only snapshot."
 msgstr "建立唯讀快照。"
 
@@ -539,9 +608,18 @@ msgstr "日期"
 msgid "Default"
 msgstr "預設值"
 
+#, fuzzy
+msgid "Delete:"
+msgstr "  刪除設定："
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "刪除設定失敗 (%s)。"
+
+# SLE12
+#, fuzzy, c-format
+msgid "Deleting snapshot %d."
+msgstr "刪除快照失敗。"
 
 # SLE12
 msgid "Deleting snapshot failed."
@@ -610,6 +688,10 @@ msgstr "無法啟始化檔案系統處理器。"
 msgid "Failed to parse '%s'."
 msgstr "剖析 \"%s\" 失敗。"
 
+#, fuzzy
+msgid "Failed to parse number."
+msgstr "剖析 \"%s\" 失敗。"
+
 #, c-format
 msgid "Failed to query free space for path '%s'."
 msgstr "查詢路徑 \"%s\" 的可用空間失敗。"
@@ -648,6 +730,10 @@ msgstr "GB"
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr "GiB"
+
+#, fuzzy
+msgid "Global options:"
+msgstr "    全域選項："
 
 #, c-format
 msgid "IO Error (%s)."
@@ -708,11 +794,20 @@ msgid "Invalid snapshots."
 msgstr "不適用的快照。"
 
 # SLE12
+#, fuzzy, c-format
+msgid "Invalid subvolume path '%s' on target."
+msgstr "無效的子磁碟區。"
+
+# SLE12
 msgid "Invalid subvolume."
 msgstr "無效的子磁碟區。"
 
 #, c-format
 msgid "Invalid table style '%s'."
+msgstr "表格樣式 \"%s\" 無效。"
+
+#, fuzzy, c-format
+msgid "Invalid target mode '%s'."
 msgstr "表格樣式 \"%s\" 無效。"
 
 # SLE12
@@ -731,8 +826,15 @@ msgstr "鍵"
 msgid "KiB"
 msgstr "KiB"
 
+#, fuzzy
+msgid "List configs:"
+msgstr "  列出設定："
+
 msgid "List snapshots from all accessible configs."
 msgstr "列出所有可存取組態中的快照。"
+
+msgid "List:"
+msgstr ""
 
 #, c-format
 msgid "Listing configs failed (%s)."
@@ -779,6 +881,9 @@ msgstr "名稱"
 msgid "Name of config template to use."
 msgstr "要使用的組態範本的名稱。"
 
+msgid "No backup configs found."
+msgstr ""
+
 msgid "No command provided."
 msgstr "沒有提供命令。"
 
@@ -791,6 +896,12 @@ msgstr "無許可權。"
 
 msgid "Number of corresponding pre snapshot."
 msgstr "對應前快照的編號。"
+
+msgid "Only use backup-config with automatic set."
+msgstr ""
+
+msgid "Only use backup-config with specified target-mode."
+msgstr ""
 
 #, c-format
 msgid "Opening file '%s' failed."
@@ -821,6 +932,9 @@ msgstr "P"
 msgid "PB"
 msgstr "PB"
 
+msgid "Path mismatch between backup-config and config."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -847,6 +961,22 @@ msgstr "列印第二個建立的快照的編號。"
 msgid "Print version and exit."
 msgstr "列印版本並離開。"
 
+#, fuzzy
+msgid "Probing extra information for source snapshots."
+msgstr "快照的描述。"
+
+#, fuzzy
+msgid "Probing extra information for target snapshots."
+msgstr "快照的描述。"
+
+#, fuzzy
+msgid "Probing source snapshots."
+msgstr "快照的描述。"
+
+#, fuzzy
+msgid "Probing target snapshots."
+msgstr "快照的描述。"
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "定額錯誤 (%s)。"
@@ -863,6 +993,64 @@ msgstr "唯讀"
 # SLE12
 msgid "Run command and create pre and post snapshots."
 msgstr "執行指令並建立前和後快照。"
+
+#, c-format
+msgid "Running delete failed for %d of %ld backup config."
+msgid_plural "Running delete failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running list failed for %d of %ld backup config."
+msgid_plural "Running list failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer and delete failed for %d of %ld backup config."
+msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer and delete for backup config '%s'."
+msgstr ""
+
+#, c-format
+msgid "Running transfer failed for %d of %ld backup config."
+msgid_plural "Running transfer failed for %d of %ld backup configs."
+msgstr[0] ""
+
+#, c-format
+msgid "Running transfer for backup config '%s' failed."
+msgstr ""
+
+#, c-format
+msgid "Running transfer for backup config '%s'."
+msgstr ""
+
+msgid "SSH Host"
+msgstr ""
+
+msgid "SSH Identity"
+msgstr ""
+
+msgid "SSH Port"
+msgstr ""
+
+# SLE12
+#, fuzzy
+msgid "SSH User"
+msgstr "使用者"
 
 msgid "Save status to file."
 msgstr "將狀態儲存至檔案。"
@@ -882,6 +1070,10 @@ msgstr "設定 JSON 輸出格式。"
 
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "設定機器可讀的輸出格式 (csv、json)。"
+
+#, fuzzy
+msgid "Set name of backup-config to use."
+msgstr "設定要使用的組態名稱。"
 
 msgid "Set name of config to use."
 msgstr "設定要使用的組態名稱。"
@@ -904,9 +1096,32 @@ msgstr "正在將預設子磁碟區設定為快照 %d。"
 msgid "Snapshot '%u' not found."
 msgstr "快照 '%u' 找不到。"
 
+#, fuzzy
+msgid "Snapshot already on target."
+msgstr "將快照設定為唯讀模式。"
+
 # SLE12
 msgid "Snapshot is in use."
 msgstr "快照正在使用中。"
+
+# SLE12
+#, fuzzy
+msgid "Snapshot not on source."
+msgstr "快照正在使用中。"
+
+#, fuzzy
+msgid "Snapshot not on target."
+msgstr "快照 '%u' 找不到。"
+
+#, fuzzy, c-format
+msgid "Snapshot number %d not found."
+msgstr "快照 '%u' 找不到。"
+
+msgid "Source Path"
+msgstr ""
+
+msgid "Source State"
+msgstr ""
 
 # SLE12
 msgid "Subvolume"
@@ -929,6 +1144,15 @@ msgstr "TB"
 msgid "Table style (integer)."
 msgstr "表格樣式 (整數)。"
 
+msgid "Target Mode"
+msgstr ""
+
+msgid "Target Path"
+msgstr ""
+
+msgid "Target State"
+msgstr ""
+
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "可以使用 --ambit 選項以手動方式指定範圍。"
 
@@ -942,8 +1166,24 @@ msgstr "如果系統未設定為復原，便可能發生此情況。"
 msgid "TiB"
 msgstr "TiB"
 
+msgid "Transfer and delete:"
+msgstr ""
+
+msgid "Transfer:"
+msgstr ""
+
+# SLE12
+#, fuzzy, c-format
+msgid "Transferring snapshot %d."
+msgstr "建立快照失敗。"
+
 # SLE12
 msgid "Try 'snapper --help' for more information."
+msgstr "請嘗試執行「snapper --help」以獲得詳細資訊。"
+
+# SLE12
+#, fuzzy
+msgid "Try 'snbk --help' for more information."
 msgstr "請嘗試執行「snapper --help」以獲得詳細資訊。"
 
 msgid "Try to make space available."
@@ -1073,7 +1313,31 @@ msgstr "無執行動作"
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr "root 參數只能與 no-dbus 一併使用。\n"
 
+#, fuzzy
+msgid "snbk delete [numbers]"
+msgstr "\tsnapper delete <數字>"
+
+# SLE12
+#, fuzzy
+msgid "snbk list"
+msgstr "\tsnapper list"
+
+# SLE12
+#, fuzzy
+msgid "snbk list-configs"
+msgstr "\tsnapper list-configs"
+
+msgid "snbk transfer [numbers]"
+msgstr ""
+
+msgid "snbk transfer-and-delete"
+msgstr ""
+
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr "用法： snapper [--全域選項] <命令> [--命令選項] [命令參數]"
+
+#, fuzzy
+msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "用法： snapper [--全域選項] <命令> [--命令選項] [命令參數]"
 
 msgid "yes"
